# OMIM

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
_v1/: manifest.json
_v1/splits/: train.jsonl  val.jsonl
_v2/: dataset_metadata.json
_x1/: dataset_metadata.json
_x2/: manifest.json
data/datasets/: README.md
data/grounding/: README.md  catalog_reference_profile.json
data/ontology/: constraints.yaml  features.yaml  materials.yaml  operations.yaml  relationships.yaml
data/pid/: README.md  pid_rules.yaml
data/rules/: layer1_geometric.yaml  layer2_manufacturability.yaml  panel_cnc_rules.yaml
docs/: FOR_THE_REVIEWER.md  REAL_DATA_DROP_IN.md  RELEASE_READINESS.md  STRATEGY.md
docs/.obsidian/: graph.json  workspace.json
docs/01_FOUNDATION/: Authority_Hierarchy.md  Non_Goals.md  (+4 more)
experiments/: phase4_model_vs_rules.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
tests/: conftest.py  test_acceptance.py  test_api.py  test_assembly_solver.py  test_benchmarks.py  test_calibrate_pipeline.py  test_calibration.py  test_capability_on_real_data.py  test_catalog_corrections.py  test_chamfer_fillet.py  test_confidence.py  test_corpus.py  test_dataset_adapters.py  test_decision_boundaries.py  test_depth.py  test_dialect_reliance.py  test_domain_registry.py  test_engraving_and_pdecimal.py  test_generator_coverage.py  test_grounding_claim.py  test_identify_assembly.py  test_identify_parts.py  test_integrity.py  test_isotonic_calibration.py  test_labeling.py  test_layer_blind.py  test_layer_profiles.py  test_mgg.py  test_ml.py  test_ml_label_join.py  test_nesting.py  test_parser.py  test_parser_robustness.py  test_pid.py  test_pid_benchmark.py  test_pipeline.py  test_reproducibility.py  test_review_sheet.py  test_ruleset_config.py  test_synthetic.py  (+7 more)
tools/: migrate_dataset.py  verify_dataset.py
(+225 files in other folders)
