[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omim"
version = "0.1.0"
description = "Open Manufacturing Intelligence Middleware — deterministic manufacturing geometry analysis with provenance-tracked semantic inference"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "OMIM Contributors" },
]
keywords = ["manufacturing", "CNC", "DXF", "geometry", "graph", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ezdxf>=1.3.0",
    "shapely>=2.0",
    "networkx>=3.2",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2",
    "torch-geometric>=2.5",
    "scikit-learn>=1.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
omim = "omim.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/omim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# UP042: `(str, Enum)` is intentional — it is the canonical Pydantic-friendly
# pattern for string enums and keeps `.value` semantics explicit across the
# provenance/graph schema. Not migrating to StrEnum.
ignore = ["UP042"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
